# memory-vault

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  compose.yaml  docker-entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: build-windows-portable.yml
_meta/: __init__.py  build_context.py  client_config_example.json  mcp_server.py  rules.md  serve_http.bat
_meta/deploy/: memory-vault-mcp.service  vps_setup.md
app/: README.md  package.json
app/server/: config.easy.json  config.example.json  package-lock.json  package.json
app/server/scripts/: mock-claude.mjs
app/server/src/: auth.ts  config.ts  db.ts  index.ts  seed.ts  sse.ts
app/server/src/agents/: claudeCli.ts  codexAppServer.ts  directApi.ts  jsonlProcess.ts  manager.ts  types.ts
app/server/src/memory/: capture.ts  inject.ts  vaultClient.ts
app/server/src/quota/: claudeQuota.ts
app/server/src/routes/: contacts.ts  messages.ts  user.ts  workers.ts
app/server/test/: auth.test.mjs
app/web/: index.html  package-lock.json  package.json  vite.config.ts
app/web/src/: App.tsx  api.ts  styles.css
app/web/src/components/: ChatPane.tsx  ContactConfig.tsx  ContactList.tsx  MessageBubble.tsx  UserConfig.tsx  WorkerPanel.tsx
app/worker/: config.example.json  install-startup.ps1  package.json  worker.mjs
easy/: README.md  start.cmd  start.ps1
memories/: owner-core.md
memory_vault_mcp/: __init__.py  cli.py
memory_vault_mcp/template/_meta/: vault_config.yaml
memory_vault_mcp/template/_meta/cli/: global-agent-workflow.md
memory_vault_mcp/template/memories/: owner-ai-interaction-styles.md
template/: .gitignore  AGENTS.md
template/_meta/: rules.md
tests/: http_smoke.py  protocol_smoke.py  smoke.py  template_sync.py
